test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-unmanaged.good
init-field-dflt-nonnil-owned-from-nonnil-unmanaged.chpl:8: error: Cannot initialize 'lhs' of type owned MyClass from a 'unmanaged MyClass'
